Changing ANT build system with Maven using getAttributeDefaults.xsl as integration regression test using the JAR